--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,9 +3,9 @@ name: Build and deploy to pages
 on:
   workflow_dispatch:
 
-  # Runs on pushes targeting the default branch
-  #push:
-  #  branches: ["main"]
+  Runs on pushes targeting the default branch
+  push:
+    branches: ["main"]
 
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
