--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,7 +31,7 @@ jobs:
           python-version: '3.13'
       
       - name: Run script
-        run: ./build
+        run: bash ./build
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
