--- a/build
+++ b/build
@@ -10,11 +10,13 @@ HT_NAME='hypertemplate.py'
 HT_URL='https://raw.githubusercontent.com/milo256/hypertemplate/refs/heads/master/hypertemplate.py'
 
 if [[ -f $HT_NAME ]]; then
-    cmd="./$HT_NAME"
+    ht_cmd="./$HT_NAME"
 else
-    cmd="python3 <(curl $HT_URL)"
+    ht_cmd="python3 <(curl $HT_URL)"
 fi
 
 set -x
 
-eval $cmd -t $TEMPLATE_PATH -d $DOCS_PATH $OUT_PATH $@
+./postpost.py
+
+eval $ht_cmd -t $TEMPLATE_PATH -d $DOCS_PATH $OUT_PATH $@
