--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Install ImageMagick
-        run: apt install imagemagick
+        run: sudo apt install imagemagick
 
       - name: Set up Python
         uses: actions/setup-python@v5 
